--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ header p {
     background-color: #003366;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 5px; /* Reduced padding */
+    font-size: 12px; /* Reduced font size */
     position: fixed;
     bottom: 0;
     width: 100%;
